feat(cubeapi): align template aliases with e2b
